final ada project

--- a/login.html
+++ b/login.html
@@ -48,7 +48,7 @@
                                 <img src="icons/phone.png" alt="">
                                 <div>
                                     <h5>Call Us: (+91)123 654 785</h5>
-                                    <h6>Email Us: freshmeal@gmail.com</h6>
+                                    <h6>Email Us: pankajjoshirpvv@gmail.com</h6>
                                 </div>
                         </div>
 
