--- a/register.html
+++ b/register.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my awesome food store</title>
-    
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 
@@ -41,34 +42,35 @@
         </div>
     </header>
     <nav>
-        <div class="top">       <!--container at top-->
+        <div class="top">
+            <!--container at top-->
             <div class="container flex justify-between ">
 
-                        <div class="contact flex items-center">
-                                <img src="icons/phone.png" alt="">
-                                <div>
-                                    <h5>Call Us: (+91)123 654 785</h5>
-                                    <h6>Email Us: freshmeal@gmail.com</h6>
-                                </div>
-                        </div>
-
-
-                        <div class="branding">
-                            <img src="icons/name of website.png" alt=""> 
-                        </div>
-
-
-                        <div class="time flex items-center"> 
-                            <img src="icons/time.png" alt="">
-                            <div>
-                                <h5>Working Hours: </h5>
-                                <h6>Mon - Sat (8:00am - 12.00am)</h6>
-                            </div>                    
-                        </div>
-
-
+                <div class="contact flex items-center">
+                    <img src="icons/phone.png" alt="">
+                    <div>
+                        <h5>Call Us: (+91)123 654 785</h5>
+                        <h6>Email Us: pankajjoshirpvv@gmail.com</h6>
+                    </div>
                 </div>
+
+
+                <div class="branding">
+                    <img src="icons/name of website.png" alt="">
+                </div>
+
+
+                <div class="time flex items-center">
+                    <img src="icons/time.png" alt="">
+                    <div>
+                        <h5>Working Hours: </h5>
+                        <h6>Mon - Sat (8:00am - 12.00am)</h6>
+                    </div>
+                </div>
+
+
             </div>
+        </div>
         </div>
         <div class="navbar magic-shadow">
             <div class="container flex justify-center">
@@ -91,25 +93,25 @@
                     <h1>Register</h1>
                     <p>
                         <label>User-Name*</label><br><br>
-                        <input type="name"  placeholder="User-Name" name="user-name" required>
+                        <input type="name" placeholder="User-Name" name="user-name" required>
                     </p>
 
                     <p>
                         <label>email*</label><br><br>
-                        <input type="email"  placeholder="email@gmail.com" name="password" required>
+                        <input type="email" placeholder="email@gmail.com" name="password" required>
                     </p>
                     <p>
                         <label>Password*</label><br><br>
-                        <input type="password"  placeholder="Your Password" name="password" required>
+                        <input type="password" placeholder="Your Password" name="password" required>
                     </p>
                     <p>
                         <label>Date of Birth*</label><br><br>
-                        <input type="date"  placeholder="date" name="password" required>
+                        <input type="date" placeholder="date" name="password" required>
                     </p>
-                    
+
 
                     <div class="buttons flex justify-center">
-                            <button class="login-btn">Register</button>
+                        <button class="login-btn">Register</button>
                     </div>
 
                 </form>
