--- a/About.html
+++ b/About.html
@@ -48,7 +48,7 @@
                                 <img src="icons/phone.png" alt="">
                                 <div>
                                     <h5>Call Us: (+91)123 654 785</h5>
-                                    <h6>Email Us: freshmeal@gmail.com</h6>
+                                    <h6>Email Us: pankajjoshirpvv@gmail.com</h6>
                                 </div>
                         </div>
 
@@ -88,11 +88,11 @@
         <div class="container">
            <div class="about-wrapper flex">
                <div class="name">
-                   <h2> PROJECT ON : DISCRETE CO</h2>
+                   <h2> PROJECT ON : ADA PROJECT</h2>
                    <div class="our-name">
                        <div>
-                           <h3>PANKAJ JOSHI</h3>
-                           <span>2K20 / CO /315</span>
+                           <h3>PANKAJ JOSHI ----- PARVESH KR. </h3>
+                           <span>2K20/CO/315 ------------2K20/CO/320</span>
                         </div>
                      
                    </div>
