about section updated

--- a/About.html
+++ b/About.html
@@ -88,11 +88,11 @@
         <div class="container">
            <div class="about-wrapper flex">
                <div class="name">
-                   <h2> PROJECT ON : ADA PROJECT</h2>
+                   <h2> PROJECT</h2>
                    <div class="our-name">
                        <div>
-                           <h3>PANKAJ JOSHI ----- PARVESH KR. </h3>
-                           <span>2K20/CO/315 ------------2K20/CO/320</span>
+                           <h3>PANKAJ JOSHI</h3>
+                           <span>2K20/CO/315</span>
                         </div>
                      
                    </div>
